--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,10 +2,9 @@ name = "lightevent-bomingfu"
 compatibility_date = "2024-01-01"
 pages_build_output_dir = "dist"
 
-[env.production]
-routes = [
-  { pattern = "lightevent.bomingfu.com/*", custom_domain = true }
-]
+# Pages 专用配置
+[pages]
+build_output_dir = "dist"
 
-[[env.production.env.vars]]
-NODE_ENV = "production"
+[env.production]
+vars = { NODE_ENV = "production" }
