--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,10 @@
 name = "lightevent-bomingfu"
 compatibility_date = "2024-01-01"
-pages_build_output_dir = "dist"
-
-# Pages 专用配置
-[pages]
-build_output_dir = "dist"
 
 [env.production]
-vars = { NODE_ENV = "production" }
+routes = [
+  { pattern = "lightevent.bomingfu.com/*", custom_domain = true }
+]
+
+[[env.production.env.vars]]
+NODE_ENV = "production"
